# FlappyBird

./: CMakeLists.txt  README.md
Header Files/: Bird.h  BirdState.h  Game.h  Globals.h  NeuralNetwork.h  Pipe.h
src/: Bird.cpp  BirdState.cpp  Game.cpp  NeuralNetwork.cpp  Pipe.cpp  main.cpp
